<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adib_qo_shish"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_adib"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_person_outline_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnImageAdib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/green"
                android:text="@string/adib_rasmi"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="12dp" />

            <EditText
                android:id="@+id/edt_ism"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/adib_ismi_familiyasi"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edt_tugilgan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/tug_gilgan_sanasi"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edt_vafot"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/vafot_etkan_sanasi"
                android:inputType="text"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/spin_turi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edt_background"
                    android:entries="@array/Adabiyot_array"
                    android:gravity="center"
                    android:padding="10dp">

                </Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/edt_malumot"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="start"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/adib_haqida_ma_lumot"
                android:inputType="text"
                android:padding="10dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/green"
                android:text="@string/saqlash"
                app:cornerRadius="12dp" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>